added back the spells